# opengl

./: .gitignore  README.md
meta/: COMPILE
sample/opengl/demos/: .editorconfig  .gitlab-ci.yml  README.rst  meson.build  meson_options.txt
sample/opengl/demos/.gitlab-ci/: prepare-glut-mingw.sh  x86_64-w64-mingw32
sample/opengl/demos/src/: meson.build
sample/opengl/demos/src/data/: meson.build
sample/opengl/demos/src/demos/: dinoshade.c
sample/opengl/demos/src/egl/: meson.build
sample/opengl/demos/src/egl/eglut/: eglut.c  eglut.h  eglut_wayland.c  meson.build
sample/opengl/demos/src/egl/opengl/: eglkms.c  meson.build  xeglgears.c
sample/opengl/demos/src/egl/opengles1/: bindtex.c  eglfbdev.c  es1_info.c  meson.build  msaa.c  pbuffer.c  render_tex.c  torus.c  tri.c  two_win.c
sample/opengl/demos/src/egl/opengles2/: es2tri.c  meson.build
sample/opengl/demos/src/fp/: meson.build  scs.txt
sample/opengl/demos/src/fpglsl/: meson.build
sample/opengl/demos/src/glad/: meson.build
sample/opengl/demos/src/glsl/: meson.build  samplers.c  shtest.c  texaaline.c
sample/opengl/demos/src/gs/: meson.build
sample/opengl/demos/src/objviewer/: meson.build  objview.c
sample/opengl/demos/src/osdemos/: meson.build  osdemo16.c  osdemo32.c
sample/opengl/demos/src/perf/: glslstateschange.c  meson.build
sample/opengl/demos/src/redbook/: meson.build  quadric.c  surfpoints.c  tess.c  tesswind.c  trim.c
sample/opengl/demos/src/samples/: blendeq.c  meson.build  nurb.c  olympic.c  quad.c  sphere.c  tkmap.c
sample/opengl/demos/src/tests/: auxbuffer.c  meson.build  texobjshare.c
sample/opengl/demos/src/tools/: meson.build
sample/opengl/demos/src/trivial/: meson.build
sample/opengl/demos/src/util/: meson.build  shaderutil.c
sample/opengl/demos/src/vp/: meson.build
sample/opengl/demos/src/wgl/: meson.build  sharedtex_mt.c  wglcontext.c  wglinfo.c  wglthreads.c  wglutil.c  wincopy.c
sample/opengl/demos/src/xdemos/: glinfo_common.c  glsync.c  glxinfo.c  meson.build  msctest.c  omlsync.c  pbutil.c  yuvrect_client.c
sample/tutorial/: Makefile  hello_window.cpp  rectangle.cpp  triangle.cpp  triangle_chroma.cpp  triangle_color.cpp  triangle_main.cpp  triangle_two.cpp
sample/tutorial/utils/: glfwmain.h  glfwmain.hpp  glshader.h  glshader.hpp  glvertex.hpp
setup/: env.sh
