option('with-glut',              type : 'string')
option('egl',                    type : 'feature')
option('gles1',                  type : 'feature')
option('gles2',                  type : 'feature')
option('osmesa',                 type : 'feature')
option('libdrm',                 type : 'feature')
option('x11',                    type : 'feature')
option('wayland',                type : 'feature')
option('with-system-data-files', type : 'boolean', value : false)
